<resources>
    <string name="tapToast">Tap button to stop alarm</string>
    <string name="tapCellToast">Tap cell to stop alarm</string>
    <string name="start_date">Start date</string>
    <string name="hello">Hello world, splashScreen!</string>
    <string name="app_name">Medplann</string>
    <string name="logo">"Helping you schedule and\nkeep track  of  \ndaily medications"</string>
    <string name="home">Home</string>
    <string name="start_med">Start medplann</string>
    <string name="stop_med">Stop medplann</string>
    <string name="config_med">Configure medplann</string>
    <string name="name">Name*</string>
    <string name="first_name">First name*</string>
    <string name="last_name">Last name*</string>
    <string name="user_name">User name*</string>
    <string name="password">Password*</string>
    <string name="sign_up">SignUp</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="type">Type*</string>
    <string name="address">Address</string>
    <string name="zip">Zip Code</string>
    <string name="state">State</string>
    <string name="city">City</string>
    <string name="telephone">Telephone*</string>
    <string name="telephone_not_medatory">Telephone</string>
    <string name="mobile">Mobile*</string>
    <string name="mobile_not_medatory">Mobile</string>
    <string name="mail">E-Mail*</string>
    <string name="email">E-Mail</string>
    <string name="intolerance">Intolerance with</string>
    <string name="doctor">Physician</string>
    <string name="note">Note</string>
    <string name="buzz_sound_title">Buzz sound *</string>
    <string name="buzz_sound">Click on Icon to play sound and then click on row to choose it.</string>
    <string name="buzz_repetition">Buzz repetition</string>
    <string name="mini_image">Mini image</string>
    <string name="blink_cell">Blink cell</string>
    <string name="alert">Alert ring tone</string>
    <string name="text_to_speech">Text To Speech</string>
    <string name="vibration">Vibration</string>
    <string name="text_red">Text red during buzz</string>
    <string name="activate">Activate</string>
    <string name="edit_cell">Edit cells</string>
    <string name="photo">Photo category *</string>
    <string name="desc">Description*</string>
    <string name="desc_not_mentatory">Description</string>
    <string name="short_desc">Short description*</string>
    <string name="long_desc">Long description</string>
    <string name="warning">Warning message</string>
    <string name="mail_counter">Mail counter</string>
    <string name="mail_interval">Mail interval</string>
    <string name="active_ingrediant">Active ingredient</string>
    <string name="therapeutic">Therapeutic hints</string>
    <string name="caution">Caution</string>
    <string name="add">Add</string>
    <string name="show">Show</string>
    <string name="print">Print</string>
    <string name="list">List</string>
    <string name="search">Search</string>
    <string name="select">Select</string>
    <string name="help">HELP</string>
    <string name="filter">Filter</string>
    <string name="add_new">Add New</string>
    <string name="search_record">Search record for all the fields.</string>
    <string name="user_mgt">User management</string>
    <string name="user_mgt_list_title">User management</string>
    <string name="pic_mgt">"Pictures management"</string>
    <string name="pic_mgt_in">"Pictures management"</string>
    <string name="med_mgt">"Medicines &amp; treatments\n management"</string>
    <string name="med_mgt_list_title">Medicines &amp; treatments \nmanagement</string>
    <string name="phy_mgt">"Physicians  management"</string>
    <string name="phy_mgt_in">"Physicians management"</string>
    <string name="mob_mgt">"Emergency calls \n management"</string>
    <string name="mob_mgt_in">Mobile and phone\n management</string>
    <string name="date_mgt">Date and time</string>
    <string name="cell_mgt">"Boxes, cells &amp; alarms \nmanagement"</string>
    <string name="cell_mgt_in">Cells management</string>
    <string name="alarm_mgt">Alarms management</string>
    <string name="reprot_mgt">"Reports Management"</string>
    <string name="select_med">Select medicine *</string>
    <string name="select_bgColor">Background color *</string>
    <string name="sound_type">SSound types</string>
    <string name="stop_alarm">Stop alarm</string>
    <string name="wayto_stopalarm">Ways to stop Alarm</string>
    <string name="confirm_medicine">Medicine acknowledgment</string>
    <string name="inteval_time">Interval time*</string>
    <string name="inteval_days">Interval days</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="add_user">Add user</string>
    <string name="add_phy">Add physician</string>
    <string name="add_contact">Add contact</string>
    <string name="add_medicine">Add medicine</string>
    <string name="add_image">Add Image</string>
    <string name="add_cell">Add Cell</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="delete_all">Delete all</string>
    <string name="back">Back</string>
    <string name="update">Update</string>
    <string name="visiting_time">Visiting time</string>
    <string name="days">Days</string>
    <string name="from">From</string>
    <string name="to">To</string>
    <string name="mon">Monday</string>
    <string name="tues">Tuesday</string>
    <string name="wed">Wednesday</string>
    <string name="thurs">Thursday</string>
    <string name="fri">Friday</string>
    <string name="sat">Saturday</string>
    <string name="sun">Sunday</string>
    <string name="used_as_of">Used as/for</string>
    <string name="keyword">Keyword</string>
    <string name="find">Find</string>
    <string name="tel_no">Tel. No.</string>
    <string name="mob_no">Mob. No.</string>
    <string name="texocity_prompt">Medicine toxicity</string>
    <string name="country_prompt">Country</string>
    <string name="state_prompt">State</string>
    <string name="type_prompt">User type</string>
    <string name="blood_prompt">Blood group</string>
    <string name="photo_category_prompt">Photo category</string>
    <string name="visiting_prompt">Visit day</string>
    <string name="relation_prompt">Relationship</string>
    <string name="relation_prompt_mendatory">Relationship*</string>
    <string name="category_prompt">Category</string>
    <string name="dosage_prompt">Dosage</string>
    <string name="dosage_time_prompt">Dosage time</string>
    <string name="dosage_type_prompt">Dosage type/form</string>
    <string name="stop_alarm_prompt">Stop alarm</string>
    <string name="interval_time_prompt">Interval time</string>
    <string name="interval_days_prompt">Days interval</string>
    <string name="medicine_for_each_time_prompt">How many time in a day?*</string>
    <string name="dosage_mesurement_prompt">Dosage measurement*</string>
    <string name="How_many_prompt">How many times in day?</string>
    <string name="schedule_prompt">Schedule within interval chosen</string>
    <string name="week_prompt">Week of month</string>
    <string name="month_prompt">Month of year</string>
    <string name="additional_time_prompt">Additional time</string>
    <string name="day_of_interval_prompt">Day of the interval</string>
    <string name="Icon_prompt">Phone icon</string>
    <string name="call_count_prompt">Call count</string>
    <string name="time_from_prompt">Time from</string>
    <string name="time_to_prompt">Time to</string>
    <string name="route_admin_prompt">Route of administration</string>
    <string name="mobile_number">Mobile no:</string>
    <string name="tel_number">Tel. no:</string>
    <string name="auto_login">Auto Login</string>
    <string name="incorrect_login">Username or Password incorrect.</string>
    <string name="store_user_login">Do you want to save your username and password?</string>
    <string name="feild_require_register">Please enter required fields ie. First Name, Last Name, Username, Password, User Type.</string>
    <string name="alreday_exist_register">Username already exist.</string>
    <string name="enter_keyword">Please enter keyword.</string>
    <string name="enter_name">Please enter name.</string>
    <string name="enter_city">Please enter city.</string>
    <string name="enter_gender">Please enter gender.</string>
    <string name="enter_category">Please enter category.</string>
    <string name="enter_desc">Please enter description keyword.</string>
    <string name="enter_short">Please enter short description keyword.</string>
    <string name="enter_active">Please enter active ingredient.</string>
    <string name="enter_weekday">Please enter a weekday.</string>
    <string name="enter_relation">Please enter relationship.</string>
    <string name="enter_mobile_no">Please enter mobile No.</string>
    <string name="no_record_found">No record found.</string>
    <string name="first_record">First record.</string>
    <string name="last_record">Last record.</string>
    <string name="people">People</string>
    <string name="medicine">Medicine</string>
    <string name="ok">Yes</string>
    <string name="no_thanks">No</string>
    <string name="ok_thanks">Ok Thanks !</string>
    <string name="confirm">Stop</string>
    <string name="yeah_sure">Yeah sure</string>
    <string name="fail">Fail</string>
    <string name="success">Success</string>
    <string name="shot_from_Camera">No Picture added,please shot from camera.</string>
    <string name="delete_warninguser">Attention you are going to delete a user that has a box and cells connected !</string>
    <string name="delete_messagemed">Are you really sure you want to delete this medicine and all the info connected...</string>
    <string name="delete_warningmed">Attention you are going to delete a medicine that has a box and cells connected !</string>
    <string name="delete_messageuser">Are you really sure you want to delete this user and all the info connected...</string>
    <string name="delete_messagephy">Are you really sure you want to delete this physician and all the info connected...</string>
    <string name="delete_warningphy">Attention you are going to delete a physician that has a user connected !</string>
    <string name="delete_messagepic">Are you really sure you want to delete this picture and all the info connected...</string>
    <string name="delete_warningpic">Attention you are going to delete a picture that has a people and medicine connected !</string>
    <string name="delete_messagemob">Are you really sure you want to delete this contact and all the info connected...</string>
    <string name="delete_warningmob">Attention you are going to delete a contact that has a widget connected !</string>
    <string name="cell_edit">Click over the cell, you want to edit.</string>
    <string name="set_date">Set the start date of the alarm.</string>
    <string name="stop_alarm_msg">Please stop the alarm first.</string>
    <string name="set_alarm_time">Please set alarm time.</string>
    <string name="set_starting_date">Set starting date</string>
    <string name="star_date">Start date*</string>
    <string name="feild_require_user_mgt">Please enter required fields i.e. Name, Surname.</string>
    <string name="pateint_added_user_mgt">Patient added.</string>
    <string name="pateint_delete_user_mgt">"Patient's entry deleted."</string>
    <string name="pateint_update_user_mgt">Patient updated.</string>
    <string name="exists_list_user_mgt">Choose from existing list.</string>
    <string name="pname">Patient Name</string>
    <string name="mname">Medicine Name</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="taken">Taken</string>
    <string name="noreportfound">No Report Found</string>
    <string name="getreport">Get report as PDF</string>
</resources>