<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/Mainlinearlayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <include
        android:id="@+id/headerlayout"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        layout="@layout/header_title" />

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:weightSum="10" >

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:weightSum="5.5" >

            <TextView
                android:id="@+id/tv_pateintName"
                style="@style/font_size_small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dip"
                android:layout_weight="1"
                android:ellipsize="end"
                android:text="@string/pname"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_MedName"
                style="@style/font_size_small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.1"
                android:gravity="center"
                android:text="@string/mname"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_Date"
                style="@style/font_size_small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1.3"
                android:gravity="center"
                android:text="@string/date"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_Time"
                style="@style/font_size_small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/time"
                android:textColor="@color/white" />

            <TextView
                android:id="@+id/tv_DosTaken"
                style="@style/font_size_small"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.7"
                android:gravity="center"
                android:text="@string/taken"
                android:textColor="@color/white" />
        </LinearLayout>

        <View
            android:id="@+id/view"
            android:layout_width="fill_parent"
            android:layout_height="2dp"
            android:background="@color/black" />

        <ListView
            android:id="@+id/list_user_report"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="8" >
        </ListView>

        <TextView
            android:id="@+id/tv_noreport"
            android:layout_width="fill_parent"
            android:layout_height="0dp"
            android:layout_weight="8"
            android:gravity="center"
            android:text="@string/noreportfound"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:visibility="gone" />

        <LinearLayout
            android:id="@+id/linearLayout1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center" >

           <Button
                android:id="@+id/btnDelAll"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete_all" >
            </Button>
            <Button
                android:id="@+id/btnDel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/delete" >
            </Button>

            <Button
                android:id="@+id/btnPdf"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/getreport" >
            </Button>
        </LinearLayout>
    </LinearLayout>

</LinearLayout>