<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/mainUserLayout"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/main_bg_org"
    android:orientation="vertical"
    android:weightSum="10" >

	<include android:id="@+id/headerlayout" android:layout_width="fill_parent"
		android:layout_height="wrap_content" layout="@layout/header_title" />

	<RelativeLayout android:id="@+id/prevnext"
		android:layout_width="fill_parent" android:layout_height="wrap_content"
		android:gravity="center">

		<Button android:id="@+id/btnPrevUser" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_alignParentLeft="true"
			android:layout_margin="5dp" android:background="@drawable/button_previous" />

		<Button android:id="@+id/btnNextUser" android:layout_width="wrap_content"
			android:layout_height="wrap_content" android:layout_alignParentRight="true"
			android:layout_margin="5dp" android:background="@drawable/button_next" />
	</RelativeLayout>

	<ScrollView android:id="@+id/scrollView1"
		android:layout_width="fill_parent" android:layout_height="0dp"
		android:layout_weight="10">

		<LinearLayout android:id="@+id/linearLayout4"
			android:layout_width="fill_parent" android:layout_height="wrap_content"
			android:orientation="vertical" android:padding="10dp">

			<RelativeLayout android:id="@+id/linearLayout1"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:layout_gravity="center" android:weightSum="3">

				<ImageView android:id="@+id/imageUser"
					android:layout_width="80dp" android:layout_height="80dp"
					android:layout_centerVertical="true" android:scaleType="fitXY"
					android:src="@drawable/add_photo">
				</ImageView>

				<LinearLayout android:id="@+id/linearLayout2"
					android:layout_width="wrap_content" android:layout_height="fill_parent"
					android:layout_marginLeft="10dip" android:layout_toRightOf="@+id/imageUser"
					android:orientation="vertical">

					<TextView android:id="@+id/textviewTitle"
						android:layout_width="fill_parent" android:layout_height="wrap_content"
						android:paddingLeft="5dp" android:text="@string/first_name"
						android:textColor="@color/label_color" android:textStyle="bold" />

					<EditText android:id="@+id/etFName" android:singleLine="true"
						android:layout_width="fill_parent" android:layout_height="wrap_content"
						android:background="@drawable/input_field_2" android:hint="@string/first_name"
						android:paddingLeft="5dp">
					</EditText>

					<TextView android:id="@+id/textviewTitle"
						android:paddingLeft="5dp" android:layout_width="fill_parent"
						android:layout_height="wrap_content" android:text="@string/last_name"
						android:textColor="@color/label_color" android:textStyle="bold" />

					<EditText android:id="@+id/etLName" android:singleLine="true"
						android:layout_width="fill_parent" android:layout_height="wrap_content"
						android:background="@drawable/input_field_2" android:hint="@string/last_name"
						android:paddingLeft="5dp">
					</EditText>
				</LinearLayout>
			</RelativeLayout>

			<TextView android:id="@+id/textviewTitle"
				android:paddingLeft="5dp" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:text="@string/address"
				android:textColor="@color/label_color" android:textStyle="bold" />

			<EditText android:id="@+id/etAddress" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:background="@drawable/input_field_big_1"
				android:gravity="top|left" android:hint="@string/address"
				android:maxLines="5" android:paddingLeft="5dp" android:scrollbars="vertical"
				android:singleLine="false">
			</EditText>

			<TextView android:id="@+id/textviewTitle"
				android:paddingLeft="5dp" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:text="@string/zip"
				android:textColor="@color/label_color" android:textStyle="bold" />

			<EditText android:id="@+id/etZip" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:background="@drawable/input_field_1"
				android:hint="@string/zip" android:inputType="number"
				android:singleLine="true" android:paddingLeft="5dp">
			</EditText>

			<TextView android:id="@+id/textviewTitle"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:paddingLeft="5dp" android:text="@string/country_prompt"
				android:textColor="@color/label_color" android:textStyle="bold" />

			<AutoCompleteTextView android:id="@+id/autocomplete_country"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:background="@drawable/input_field_1"
				android:completionThreshold="1" android:singleLine="true"
				android:hint="@string/country_prompt" android:paddingLeft="5dp" />

			<!-- <Spinner -->
			<!-- android:id="@+id/spCountryUser" -->
			<!-- android:layout_width="fill_parent" -->
			<!-- android:layout_height="wrap_content" -->
			<!-- android:background="@drawable/spinner_bg_1" -->
			<!-- android:entries="@array/country_arrays" -->
			<!-- android:paddingLeft="10dp" -->
			<!-- android:prompt="@string/country_prompt" > -->
			<!-- </Spinner> -->


			<!-- <Spinner -->
			<!-- android:id="@+id/spStateUSUser" -->
			<!-- android:layout_width="fill_parent" -->
			<!-- android:layout_height="wrap_content" -->
			<!-- android:background="@drawable/spinner_bg_1" -->
			<!-- android:entries="@array/state_arrays" -->
			<!-- android:paddingLeft="10dp" -->
			<!-- android:prompt="@string/state_prompt" -->
			<!-- android:visibility="gone" > -->
			<!-- </Spinner> -->

			<TextView android:id="@+id/textviewTitle"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:paddingLeft="5dp" android:text="@string/state"
				android:textColor="@color/label_color" android:textStyle="bold" />

			<AutoCompleteTextView android:id="@+id/autocomplete_state"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:background="@drawable/input_field_1"
				android:completionThreshold="1" android:hint="@string/state"
				android:paddingLeft="5dp" android:visibility="gone" />

			<EditText android:id="@+id/etState" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:background="@drawable/input_field_1"
				android:hint="@string/state" android:singleLine="true"
				android:paddingLeft="5dp">
			</EditText>

			<TextView android:id="@+id/textviewTitle"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:paddingLeft="5dp" android:text="@string/city"
				android:textColor="@color/label_color" android:textStyle="bold" />

			<EditText android:id="@+id/etCity" android:singleLine="true"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:background="@drawable/input_field_1" android:hint="@string/city"
				android:paddingLeft="5dp">
			</EditText>

			<TextView android:id="@+id/textviewTitle"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:paddingLeft="5dp" android:text="@string/telephone_not_medatory"
				android:textColor="@color/label_color" android:textStyle="bold" />

			<EditText android:id="@+id/etTel" android:singleLine="true"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:background="@drawable/input_field_1" android:hint="@string/telephone_not_medatory"
				android:inputType="number" android:maxLength="20" android:maxLines="1"
				android:paddingLeft="5dp">
			</EditText>

			<TextView android:id="@+id/textviewTitle"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:paddingLeft="5dp" android:text="@string/mobile_not_medatory"
				android:textColor="@color/label_color" android:textStyle="bold" />

			<EditText android:id="@+id/etMobile" android:singleLine="true"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:background="@drawable/input_field_1" android:hint="@string/mobile_not_medatory"
				android:inputType="number" android:maxLength="20" android:maxLines="1"
				android:paddingLeft="5dp">
			</EditText>

			<TextView android:id="@+id/textviewTitle"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:paddingLeft="5dp" android:text="@string/email"
				android:textColor="@color/label_color" android:textStyle="bold" />

			<EditText android:id="@+id/etEmail" android:singleLine="true"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:background="@drawable/input_field_1" android:inputType="textEmailAddress"
				android:hint="@string/email" android:paddingLeft="5dp">
			</EditText>

			<RadioGroup android:id="@+id/gender_radio_grp"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:orientation="horizontal" android:weightSum="2">

				<RadioButton android:id="@+id/rdMale"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_weight="1" android:checked="true" android:text="@string/male"
					android:textColor="#000000">
				</RadioButton>

				<RadioButton android:id="@+id/rdFemale"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:layout_weight="1" android:text="@string/female"
					android:textColor="#000000">
				</RadioButton>
			</RadioGroup>

			<TextView android:id="@+id/textviewTitle"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:paddingLeft="5dp" android:text="@string/intolerance"
				android:textColor="@color/label_color" android:textStyle="bold" />

			<EditText android:id="@+id/etInt" android:singleLine="true"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:background="@drawable/input_field_1" android:hint="@string/intolerance"
				android:maxLines="2" android:paddingLeft="5dp">
			</EditText>

			<TextView android:id="@+id/textviewTitle"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:paddingLeft="5dp" android:text="@string/blood_prompt"
				android:textColor="@color/label_color" android:textStyle="bold" />

			<Spinner android:id="@+id/spBType" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:background="@drawable/spinner_bg"
				android:entries="@array/blood_group" android:paddingLeft="5dp"
				android:prompt="@string/blood_prompt">
			</Spinner>

			<!-- <EditText -->
			<!-- android:id="@+id/etBType" -->
			<!-- android:layout_width="fill_parent" -->
			<!-- android:layout_height="wrap_content" -->
			<!-- android:background="@drawable/input_field_1" -->
			<!-- android:hint="Blood Type" -->
			<!-- android:paddingLeft="5dp" > -->
			<!-- </EditText> -->

			<TextView android:id="@+id/textviewTitle"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:paddingLeft="5dp" android:text="@string/doctor"
				android:textColor="@color/label_color" android:textStyle="bold" />

			<EditText android:id="@+id/etPhy" android:singleLine="true"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:background="@drawable/input_field_1" android:drawableRight="@drawable/go"
				android:hint="@string/doctor" android:paddingLeft="5dp"
				android:visibility="gone" />

			<TextView android:id="@+id/tvPhy" android:layout_width="fill_parent"
				android:layout_height="wrap_content" android:background="@drawable/spinner_bg"
				android:gravity="center_vertical" android:paddingLeft="5dp"
				android:textColor="#000000" android:textSize="18sp" />

			<TextView android:id="@+id/textviewTitle"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:paddingLeft="5dp" android:text="@string/note"
				android:textColor="@color/label_color" android:textStyle="bold" />

			<EditText android:id="@+id/etNote1" android:layout_width="match_parent"
				android:layout_height="wrap_content" android:background="@drawable/input_field_1"
				android:hint="@string/note" android:maxLines="3"
				android:paddingLeft="5dp">
			</EditText>

			<TextView android:id="@+id/textviewTitle"
				android:layout_width="fill_parent" android:layout_height="wrap_content"
				android:paddingLeft="5dp" android:text="@string/note"
				android:textColor="@color/label_color" android:textStyle="bold" />

			<EditText android:id="@+id/etNote2" android:layout_width="match_parent"
				android:layout_height="wrap_content" android:background="@drawable/input_field_1"
				android:hint="@string/note" android:maxLines="3"
				android:paddingLeft="5dp">
			</EditText>

			<LinearLayout android:id="@+id/btnForAdd"
				android:layout_width="fill_parent" android:layout_height="0dp"
				android:layout_marginBottom="10dp" android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp" android:layout_weight="1"
				android:gravity="center_horizontal" android:visibility="gone">

				<Button android:id="@+id/btnCanUser" style="@style/font_size_small"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:background="@drawable/button_big_bg" android:text="@string/cancel">
				</Button>

				<Button android:id="@+id/btnAddUser" style="@style/font_size_small"
					android:layout_width="wrap_content" android:layout_height="wrap_content"
					android:background="@drawable/button_big_bg" android:text="@string/add_user">
				</Button>
			</LinearLayout>

			<LinearLayout android:id="@+id/btnForShow"
				android:layout_width="fill_parent" android:layout_height="0dp"
				android:layout_marginBottom="10dp" android:layout_marginLeft="10dp"
				android:layout_marginRight="10dp" android:layout_weight="9"
				android:gravity="center_horizontal" android:visibility="gone"
				android:weightSum="3">

				<Button android:id="@+id/btnDelUser" style="@style/font_size_small"
					android:layout_width="0dp" android:layout_height="wrap_content"
					android:layout_weight="1" android:background="@drawable/red_button_bg1"
					android:text="@string/delete" android:textColor="@color/black">
				</Button>

				<Button android:id="@+id/btnBkUser" style="@style/font_size_small"
					android:layout_width="0dp" android:layout_height="wrap_content"
					android:layout_weight="1" android:background="@drawable/button_big_bg"
					android:text="@string/back">
				</Button>

				<Button android:id="@+id/btnUpUser" style="@style/font_size_small"
					android:layout_width="0dp" android:layout_height="wrap_content"
					android:layout_weight="1" android:background="@drawable/button_big_bg"
					android:text="@string/update">
				</Button>
			</LinearLayout>
		</LinearLayout>
	</ScrollView>

</LinearLayout>